--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
+
   },
   "dependencies": {
+    "express": "^4.17.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
