--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
-
   },
   "dependencies": {
     "express": "^4.17.3",
+    "knex": "^1.0.3",
     "next": "12.1.0",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "nodemon": "^2.0.15",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
   }
