--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "knex": "^1.0.3",
+    "mysql": "^2.18.1",
     "next": "12.1.0",
-    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
